# llm-zoomcamp-hw-02-vector-search

./: .gitignore  README.md  export_contenu.md  homework_2.ipynb  homework_2.md  pyproject.toml
lessons/: README.md
